<resources>
    <string name="app_name">Healthopia</string>
    <string name="title">نبض سلامتی در دستان شما</string>
    <string name="username">نام کاربری</string>
    <string name="pass">رمز عبور</string>
    <string name="mental">سلامت روانی</string>
    <string name="physical">سلامت جسمی</string>
    <string name="aboutus">درباره ما</string>
    <string name="exit">خروج</string>
    <string name="profile">پروفایل</string>
    <string name="name">نام</string>
    <string name="fam">نام خانوادگی</string>
    <string name="personal">اطلاعات فردی</string>
    <string name="set">تنظیمات</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="title3">جنسیت</string>
    <string name="passwordchange">تغییر رمز عبور</string>
    <string name="water">تعداد لیوان های آب</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="heighttitle">قد</string>
    <string name="weight">وزن</string>
    <string name="bmi">محاسبه BMI</string>
    <string name="sport">برنامه ورزشی</string>
    <string name="food">برنامه غذایی</string>
    <string name="sleeptime">ساعت خواب</string>
    <string name="daily">کارهای روزانه</string>
    <string name="sleepadvice">میزان خواب مناسب برای بدن بین 7 تا 8 ساعت می باشد.</string>
    <string name="login">ورود</string>
    <string name="ww">وزن را وارد کنید</string>
    <string name="height">قد را وارد کنید</string>
    <string name="candb">ثبت و بازگشت</string>
    <string name="dailyy">لیست کارهای روزانه</string>
    <string name="cnfrm">تایید رمز عبور</string>
    <string name="nwpass">رمز عبور جدید</string>
    <string name="crnt">رمز عبور فعلی</string>
    <string name="foodtitle">برنامه غذایی روزانه</string>
    <string name="foodwarning">نکته مهم: آیتم های این برنامه غذایی برای ایجاد تنوع هر چه بیشتر در رژیم غذایی ورزشکاران طراحی شده اند بنابراین اگر موردی در دسترس نیست به راحتی می توانید با آیتم های مشابه آنها را جایگزین کنید.</string>
</resources>