<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    tools:context=".homepage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/black"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/welcomename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:layout_marginTop="10dp"
                android:fontFamily="@font/medium"
                android:text="خوش آمدی، حسین محسنی"
                android:textColor="#ffffff"
                android:textDirection="rtl"
                android:textSize="15sp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="جمله روز"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:fontFamily="@font/medium"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="3dp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/bold"
            android:textSize="15sp"
            android:textColor="#ffffff"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="310dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="375dp">

        <Button
            android:id="@+id/todo"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button6"
            android:fontFamily="@font/bold"
            android:text="@string/daily" />
        <Button
            android:id="@+id/mental"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button1"
            android:fontFamily="@font/bold"
            android:text="@string/mental" />

        <Button
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button2"
            android:fontFamily="@font/bold"
            android:text="@string/physical" />

        <Button
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button3"
            android:fontFamily="@font/bold"
            android:text="@string/profile" />

        <Button
            android:id="@+id/aboutus"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button4"
            android:fontFamily="@font/bold"
            android:text="@string/aboutus" />

        <Button
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/button5"
            android:fontFamily="@font/bold"
            android:text="@string/exit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>