<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/BackGround"
    android:layout_height="match_parent"
    tools:context=".profile">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pro" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.148" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.769"
        app:srcCompat="@drawable/pr" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="523dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="@string/set" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:textColor="@color/title"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bold"
            android:text="@string/name"

            android:textDirection="rtl" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/aname"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/inputdesign"
                android:ems="10"
                android:fontFamily="@font/medium"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/title"
                android:textColorHint="@color/about" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:textColor="@color/title"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/fam"
            android:textDirection="rtl" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/afamily"
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/inputdesign"
                android:ems="10"
                android:fontFamily="@font/medium"
                android:hint="@string/fam"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/title"
                android:textColorHint="@color/about" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"

            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:textColor="@color/title"
            android:fontFamily="@font/bold"
            android:textSize="15dp"
            android:text="@string/title3"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/amanbtn"
                android:textColor="@color/title"
                android:fontFamily="@font/bold"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/man"
                android:textAlignment="viewStart" />

            <RadioButton
                android:id="@+id/awomanbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:fontFamily="@font/bold"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="@string/woman"
                android:textAlignment="viewStart" />
        </RadioGroup>
        <Button
            android:id="@+id/regg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/candb"
            android:fontFamily="@font/bold"
            android:background="@drawable/button3"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:textColor="#ffffff"
            />
        <Button
            android:id="@+id/chngpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordchange"
            android:fontFamily="@font/bold"
            android:background="@drawable/button4"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:textColor="#ffffff"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/back"
        android:layout_width="49dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_action_back_white" />

</androidx.constraintlayout.widget.ConstraintLayout>