<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/BackGround"
    android:layout_height="match_parent"
    tools:context=".mental">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="304dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="260dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sleeptime"
                    android:textDirection="rtl"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title"
                    android:textSize="20sp"
                    android:text="@string/sleeptime" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minus1"
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button3"
                        android:text="@string/minus"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/sleepnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/add1"
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button3"
                        android:text="@string/plus"
                        android:textColor="#ffffff"
                        android:textSize="20dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView14"
                    android:textDirection="rtl"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/sleepadvice"
                    android:textColor="@color/title"/>

                <Button
                    android:id="@+id/madvice"
                    android:background="@drawable/button2"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="توصیه های سلامت روان" />



                <Button
                    android:id="@+id/bored"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="حوصلم سر رفته..."
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/mental"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backm"
            android:layout_width="51dp"
            android:layout_height="53dp"
            app:srcCompat="@drawable/ic_action_back_white"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/mental"
            android:textDirection="rtl"
            android:textColor="#ffffff"
            android:textSize="20sp"
             />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>